Some correction in index.html

--- a/index.html
+++ b/index.html
@@ -4,138 +4,120 @@
 <!--[if IE 8]>    <html lang="en" class="no-js ie8"> <![endif]-->
 <!--[if gt IE 8]><!-->
 <html class='no-js' lang='en'>
-	<!--<![endif]-->
-	<head>
+<!--<![endif]-->
+<head>
 
-		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<meta name="HandheldFriendly" content="true">
-
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-		<meta charset='utf-8' />
-		<meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible' />
-		<title>Andrea Spada :: Liuteria d'Autore</title>
-
-		<link rel="shortcut icon" href="favicon.ico" />
-		<link rel="apple-touch-icon" href="images/favicon.png" />
-
-		<link rel="stylesheet" href="css/maximage.css" type="text/css" media="screen" charset="utf-8" />
-		<link rel="stylesheet" href="css/styles.css" type="text/css" media="screen" charset="utf-8" />
-
-		<!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-
-		<!--[if IE 6]>
+<meta name="p:domain_verify" content="3569246ca2a440949568c21409599638" />
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<meta name="HandheldFriendly" content="true">
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<meta charset='utf-8' />
+<meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible' />
+<title>Andrea Spada :: Liuteria d'Autore</title>
+<link rel="shortcut icon" href="favicon.ico" />
+<link rel="apple-touch-icon" href="images/favicon.png" />
+<link rel="stylesheet" href="css/maximage.css" type="text/css" media="screen" charset="utf-8" />
+<link rel="stylesheet" href="css/styles.css" type="text/css" media="screen" charset="utf-8" />
+<!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+<!--[if IE 6]>
 			<style type="text/css" media="screen">
 				.gradient {display:none;}
 			</style>
 		<![endif]-->
-	</head>
-	<body>
+</head>
+<body>
 
-		<!-- Social Links -->
-		<nav class="social-nav">
-			<ul>
-				<li><a href="https://www.facebook.com/liuteriadautore/"><img src="images/icon-facebook.png" /></a></li>
-				<!-- <li><a href="#"><img src="images/icon-twitter.png" /></a></li> -->
-				<li><a href="https://plus.google.com/u/0/+AndreaSpada"><img src="images/icon-google.png" /></a></li>
-				<!-- <li><a href="#"><img src="images/icon-dribbble.png" /></a></li>
-				<li><a href="#"><img src="images/icon-linkedin.png" /></a></li> -->
-				<li><a href="https://br.pinterest.com/andreaspadabass/"><img src="images/icon-pinterest.png" /></a></li>
-			</ul>
-		</nav>
+<nav class="social-nav">
+<ul>
+<li><a href="https://www.facebook.com/liuteriadautore/"><img src="images/icon-facebook.png" /></a></li>
 
-		<nav class="lang-switcher">
-			<ul>
-				<li><button id="en" class="lang">English</button></li>
-				<li><button id="it" class="lang">Italiano</button></li>
-				<li><button id="pt" class="lang">Portugues</button></li>
-			</ul>
-		</nav>
+<li><a href="https://plus.google.com/u/0/+AndreaSpada"><img src="images/icon-google.png" /></a></li>
 
-		<!-- Switch to full screen -->
-		<button class="full-screen" onclick="$(document).toggleFullScreen()"></button>
+<li><a href="https://br.pinterest.com/andreaspadabass/"><img src="images/icon-pinterest.png" /></a></li>
+</ul>
+</nav>
+<nav class="lang-switcher">
+<ul>
+<li><button id="en" class="lang">English</button></li>
+<li><button id="it" class="lang">Italiano</button></li>
+<li><button id="pt" class="lang">Portugues</button></li>
+</ul>
+</nav>
 
-		<!-- Site Logo -->
-		<div id="logo">Andrea Spada <div class="logo-accent">Liuteria d'Autore</div></div>
+<button class="full-screen" onclick="$(document).toggleFullScreen()"></button>
 
-		<!-- Main Navigation -->
-		<nav class="main-nav">
-			<ul>
-				<li><a href="#home" class="active">Home</a></li>
-				<li><a href="#about" key="menu-about" class="tr">About</a></li>
-				<li><a href="#contact" key="menu-contact" class="tr">Contact</a></li>
-			</ul>
-		</nav>
+<div id="logo">Andrea Spada <div class="logo-accent">Liuteria d'Autore</div></div>
 
-		<!-- Slider Controls -->
-		<a href="" id="arrow_left"><img src="images/arrow-left.png" alt="Slide Left" /></a>
-		<a href="" id="arrow_right"><img src="images/arrow-right.png" alt="Slide Right" /></a>
+<nav class="main-nav">
+<ul>
+<li><a href="#home" class="active">Home</a></li>
+<li><a href="#about" key="menu-about" class="tr">About</a></li>
+<li><a href="#contact" key="menu-contact" class="tr">Contact</a></li>
+</ul>
+</nav>
 
-		<!-- Home Page -->
-		<section class="content show" id="home">
-			<h1 key="welcome" class="tr">Welcome</h1>
-			<h5 key="welcome-sub" class="tr">My new site is coming soon!</h5>
-			<p key="welcome-txt" class="tr">I'm a maker and restorer of fine string instruments. I'm quite specialised in Double Basses, however I work with the whole strings family, from Violins to Viols.</p>
-			<p><a href="#about" key="more" class="tr">Tell me more</a>...</p>
-		</section>
+<a href="" id="arrow_left"><img src="images/arrow-left.png" alt="Slide Left" /></a>
+<a href="" id="arrow_right"><img src="images/arrow-right.png" alt="Slide Right" /></a>
 
-		<!-- About Page -->
-		<section class="content hide" id="about">
-			<h1 key="about" class="tr">About</h1>
-			<h5 key="about-sub" class="tr">Here's a little about what I'm up to.</h5>
-			<p key="about-txt" class="tr">As I`m very busy quite now, I had to postpone the overhauling of the new site. Till there, you can safely browse my legacy website, <a href="http://old.andreaspada.com">old.andreaspada.com</a>.	It`s not updated by a while, so you can easily miss something if you are searching for information on latest news in regard my work.
-				<br>Hovewer, you`ll find precious insight about my workmanship and information about many of the model I offer.
-				<br>You can always stay uptodate with my work on <a href="https://www.facebook.com/liuteriadautore/">facebook</a><br>
-				<br>Beside basses, cellos and alike, you`ll find as well information about my <a href="https://www.facebook.com/contrabassetto/"><b>Contrabassettos</b></a>, a special kind of instrument I invented and developed during the last ten years, which are devoted to the travelling double bassist.<br>
-				<br>I`m glade you visited my site, so if you have some question, you can contact me though some social links - upper right corner... - or using my contact information, in the <a href="#contact">contact</a> page. Thank you!</p>
-		</section>
+<section class="content show" id="home">
+<h1 key="welcome" class="tr">Welcome</h1>
+<h5 key="welcome-sub" class="tr">My new site is coming soon!</h5>
+<p key="welcome-txt" class="tr">I'm a maker and restorer of fine string instruments. I'm quite specialised in Double Basses, however I work with the whole strings family, from Violins to Viols.</p>
+<p><a href="#about" key="more" class="tr">Tell me more</a>...</p>
+</section>
 
-		<!-- Contact Page -->
-		<section class="content hide" id="contact">
-			<h1 key="contact" class="tr">Contact</h1>
-			<h5 key="contact-sub" class="tr">Get in touch.</h5>
-			<p><a href="mailto:xinxfxo@anxdxrexasxpaxda.xcom"
-    onmouseover="this.href=this.href.replace(/x/g,'');"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i> email</a><br>
-		<i class="fa fa-phone fa-2x" aria-hidden="true"></i> +55 21 987557070<br /></p>
-		</section>
+<section class="content hide" id="about">
+<h1 key="about" class="tr">About</h1>
+<h5 key="about-sub" class="tr">Here's a little about what I'm up to.</h5>
+<p key="about-txt" class="tr">As I`m very busy quite now, I had to postpone the overhauling of the new site. Till there, you can safely browse my legacy website, <a href="http://old.andreaspada.com">old.andreaspada.com</a>.	It`s not updated by a while, so you can easily miss something if you are searching for information on latest news in regard my work.
+<br>Hovewer, you`ll find precious insight about my workmanship and information about many of the model I offer.
+<br>You can always stay uptodate with my work on <a href="https://www.facebook.com/liuteriadautore/">facebook</a><br>
+<br>Beside basses, cellos and alike, you`ll find as well information about my <a href="https://www.facebook.com/contrabassetto/"><b>Contrabassettos</b></a>, a special kind of instrument I invented and developed during the last ten years, which are devoted to the travelling double bassist.<br>
+<br>I`m glade you visited my site, so if you have some question, you can contact me though some social links - upper right corner... - or using my contact information, in the <a href="#contact">contact</a> page. Thank you!</p>
+</section>
 
-		<!-- Background Slides -->
-		<div id="maximage">
-			<div>
-				<img src="images/backgrounds/bg-img-1.jpg" alt="" />
-				<img class="gradient" src="images/backgrounds/gradient.png" alt="" />
-			</div>
-			<div>
-				<img src="images/backgrounds/bg-img-2.jpg" alt="" />
-				<img class="gradient" src="images/backgrounds/gradient.png" alt="" />
-			</div>
-			<div>
-				<img src="images/backgrounds/bg-img-3.jpg" alt="" />
-				<img class="gradient" src="images/backgrounds/gradient.png" alt="" />
-			</div>
-			<div>
-				<img src="images/backgrounds/bg-img-4.jpg" alt="" />
-				<img class="gradient" src="images/backgrounds/gradient.png" alt="" />
-			</div>
-			<div>
-				<img src="images/backgrounds/bg-img-5.jpg" alt="" />
-				<img class="gradient" src="images/backgrounds/gradient.png" alt="" />
-			</div>
-		</div>
+<section class="content hide" id="contact">
+<h1 key="contact" class="tr">Contact</h1>
+<h5 key="contact-sub" class="tr">Get in touch.</h5>
+<p><a href="/cdn-cgi/l/email-protection#6f170601170917002f0e01170b171d0a170e1c171f0e170b0e41170c0002" onmouseover="this.href=this.href.replace(/x/g,'');"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i> email</a><br>
+<i class="fa fa-phone fa-2x" aria-hidden="true"></i> +55 21 987557070<br /></p>
+</section>
 
-		<script src='http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.js'></script>
-		<script src="js/jquery.easing.min.js" type="text/javascript" charset="utf-8"></script>
-		<script src="js/jquery.cycle.all.js" type="text/javascript" charset="utf-8"></script>
-		<script src="js/jquery.maximage.js" type="text/javascript" charset="utf-8"></script>
-		<script src="js/jquery.fullscreen.js" type="text/javascript" charset="utf-8"></script>
-		<script src="js/jquery.ba-hashchange.js" type="text/javascript" charset="utf-8"></script>
-		<script src="js/main.js" type="text/javascript" charset="utf-8"></script>
-		<!-- fontawesome -->
-		<script src="https://use.fontawesome.com/24e236852d.js"></script>
-		<!-- translations -->
-		<script src="js/translate.js"></script>
+<div id="maximage">
+<div>
+<img src="images/backgrounds/bg-img-1.jpg" alt="" />
+<img class="gradient" src="images/backgrounds/gradient.png" alt="" />
+</div>
+<div>
+<img src="images/backgrounds/bg-img-2.jpg" alt="" />
+<img class="gradient" src="images/backgrounds/gradient.png" alt="" />
+</div>
+<div>
+<img src="images/backgrounds/bg-img-3.jpg" alt="" />
+<img class="gradient" src="images/backgrounds/gradient.png" alt="" />
+</div>
+<div>
+<img src="images/backgrounds/bg-img-4.jpg" alt="" />
+<img class="gradient" src="images/backgrounds/gradient.png" alt="" />
+</div>
+<div>
+<img src="images/backgrounds/bg-img-5.jpg" alt="" />
+<img class="gradient" src="images/backgrounds/gradient.png" alt="" />
+</div>
+</div>
+<script data-cfasync="false" src="/cdn-cgi/scripts/f2bf09f8/cloudflare-static/email-decode.min.js"></script><script src='http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.js'></script>
+<script src="js/jquery.easing.min.js" type="text/javascript" charset="utf-8"></script>
+<script src="js/jquery.cycle.all.js" type="text/javascript" charset="utf-8"></script>
+<script src="js/jquery.maximage.js" type="text/javascript" charset="utf-8"></script>
+<script src="js/jquery.fullscreen.js" type="text/javascript" charset="utf-8"></script>
+<script src="js/jquery.ba-hashchange.js" type="text/javascript" charset="utf-8"></script>
+<script src="js/main.js" type="text/javascript" charset="utf-8"></script>
 
-		<script type="text/javascript" charset="utf-8">
+<script src="https://use.fontawesome.com/24e236852d.js"></script>
+
+<script src="js/translate.js"></script>
+<script type="text/javascript" charset="utf-8">
 			$(function(){
 				$('#maximage').maximage({
 					cycleOptions: {
@@ -169,5 +151,5 @@
 
 			});
 		</script>
-  </body>
+</body>
 </html>
