--- a/index.html
+++ b/index.html
@@ -107,16 +107,16 @@
 </div>
 </div>
 <script data-cfasync="false" src="/cdn-cgi/scripts/f2bf09f8/cloudflare-static/email-decode.min.js"></script><script src='http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.js'></script>
-<script src="js/jquery.easing.min.js" type="text/javascript" charset="utf-8"></script>
-<script src="js/jquery.cycle.all.js" type="text/javascript" charset="utf-8"></script>
-<script src="js/jquery.maximage.js" type="text/javascript" charset="utf-8"></script>
-<script src="js/jquery.fullscreen.js" type="text/javascript" charset="utf-8"></script>
-<script src="js/jquery.ba-hashchange.js" type="text/javascript" charset="utf-8"></script>
-<script src="js/main.js" type="text/javascript" charset="utf-8"></script>
+<script src="https://andreaspada.github.io/js/jquery.easing.min.js" type="text/javascript" charset="utf-8"></script>
+<script src="https://andreaspada.github.io/js/jquery.cycle.all.js" type="text/javascript" charset="utf-8"></script>
+<script src="https://andreaspada.github.io/js/jquery.maximage.js" type="text/javascript" charset="utf-8"></script>
+<script src="https://andreaspada.github.io/js/jquery.fullscreen.js" type="text/javascript" charset="utf-8"></script>
+<script src="https://andreaspada.github.io/js/jquery.ba-hashchange.js" type="text/javascript" charset="utf-8"></script>
+<script src="https://andreaspada.github.io/js/main.js" type="text/javascript" charset="utf-8"></script>
 
 <script src="https://use.fontawesome.com/24e236852d.js"></script>
 
-<script src="js/translate.js"></script>
+<script src="https://andreaspada.github.io/js/translate.js"></script>
 <script type="text/javascript" charset="utf-8">
 			$(function(){
 				$('#maximage').maximage({
