--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <title>Andrea Spada :: Liuteria d'Autore</title>
 <link rel="shortcut icon" href="favicon.ico" />
 <link rel="apple-touch-icon" href="images/favicon.png" />
-<link rel="stylesheet" href="css/maximage.css" type="text/css" media="screen" charset="utf-8" />
-<link rel="stylesheet" href="css/styles.css" type="text/css" media="screen" charset="utf-8" />
+<link rel="stylesheet" href="https://rawgit.com/andreaspada/andreaspada.github.io/master/css/maximage.css" type="text/css" media="screen" charset="utf-8" />
+<link rel="stylesheet" href="https://rawgit.com/andreaspada/andreaspada.github.io/master/css/styles.css" type="text/css" media="screen" charset="utf-8" />
 <!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 <!--[if IE 6]>
 			<style type="text/css" media="screen">
@@ -86,37 +86,37 @@
 
 <div id="maximage">
 <div>
-<img src="images/backgrounds/bg-img-1.jpg" alt="" />
+<img src="https://rawgit.com/andreaspada/andreaspada.github.io/master/images/backgrounds/bg-img-1.jpg" alt="" />
 <img class="gradient" src="images/backgrounds/gradient.png" alt="" />
 </div>
 <div>
-<img src="images/backgrounds/bg-img-2.jpg" alt="" />
+<img src="https://rawgit.com/andreaspada/andreaspada.github.io/master/images/backgrounds/bg-img-2.jpg" alt="" />
 <img class="gradient" src="images/backgrounds/gradient.png" alt="" />
 </div>
 <div>
-<img src="images/backgrounds/bg-img-3.jpg" alt="" />
+<img src="https://rawgit.com/andreaspada/andreaspada.github.io/master/images/backgrounds/bg-img-3.jpg" alt="" />
 <img class="gradient" src="images/backgrounds/gradient.png" alt="" />
 </div>
 <div>
-<img src="images/backgrounds/bg-img-4.jpg" alt="" />
+<img src="https://rawgit.com/andreaspada/andreaspada.github.io/master/images/backgrounds/bg-img-4.jpg" alt="" />
 <img class="gradient" src="images/backgrounds/gradient.png" alt="" />
 </div>
 <div>
-<img src="images/backgrounds/bg-img-5.jpg" alt="" />
+<img src="https://rawgit.com/andreaspada/andreaspada.github.io/master/images/backgrounds/bg-img-5.jpg" alt="" />
 <img class="gradient" src="images/backgrounds/gradient.png" alt="" />
 </div>
 </div>
 <script data-cfasync="false" src="/cdn-cgi/scripts/f2bf09f8/cloudflare-static/email-decode.min.js"></script><script src='http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.js'></script>
-<script src="https://raw.githubusercontent.com/andreaspada/andreaspada.github.io/master/js/jquery.easing.min.js" type="text/javascript" charset="utf-8"></script>
-<script src="https://raw.githubusercontent.com/andreaspada/andreaspada.github.io/master/jquery.cycle.all.js" type="text/javascript" charset="utf-8"></script>
-<script src="https://raw.githubusercontent.com/andreaspada/andreaspada.github.io/master/jquery.maximage.js" type="text/javascript" charset="utf-8"></script>
-<script src="https://raw.githubusercontent.com/andreaspada/andreaspada.github.io/master/jquery.fullscreen.js" type="text/javascript" charset="utf-8"></script>
-<script src="https://raw.githubusercontent.com/andreaspada/andreaspada.github.io/master/jquery.ba-hashchange.js" type="text/javascript" charset="utf-8"></script>
-<script src="https://raw.githubusercontent.com/andreaspada/andreaspada.github.io/master/js/main.js" type="text/javascript" charset="utf-8"></script>
+<script src="https://rawgit.com/andreaspada/andreaspada.github.io/master/js/jquery.easing.min.js" type="text/javascript" charset="utf-8"></script>
+<script src="https://rawgit.com/andreaspada/andreaspada.github.io/master/jquery.cycle.all.js" type="text/javascript" charset="utf-8"></script>
+<script src="https://rawgit.com/andreaspada/andreaspada.github.io/master/jquery.maximage.js" type="text/javascript" charset="utf-8"></script>
+<script src="https://rawgit.com/andreaspada/andreaspada.github.io/master/jquery.fullscreen.js" type="text/javascript" charset="utf-8"></script>
+<script src="https://rawgit.com/andreaspada/andreaspada.github.io/master/jquery.ba-hashchange.js" type="text/javascript" charset="utf-8"></script>
+<script src="https://rawgit.com/andreaspada/andreaspada.github.io/master/js/main.js" type="text/javascript" charset="utf-8"></script>
 
 <script src="https://use.fontawesome.com/24e236852d.js"></script>
 
-<script src="https://raw.githubusercontent.com/andreaspada/andreaspada.github.io/master/js/translate.js"></script>
+<script src="https://rawgit.com/andreaspada/andreaspada.github.io/master/js/translate.js"></script>
 <script type="text/javascript" charset="utf-8">
 			$(function(){
 				$('#maximage').maximage({
