--- a/index.html
+++ b/index.html
@@ -106,17 +106,27 @@
 <img class="gradient" src="images/backgrounds/gradient.png" alt="" />
 </div>
 </div>
-<script data-cfasync="false" src="/cdn-cgi/scripts/f2bf09f8/cloudflare-static/email-decode.min.js"></script><script src='http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.js'></script>
-<script src="https://rawgit.com/andreaspada/andreaspada.github.io/master/js/jquery.easing.min.js" type="text/javascript" charset="utf-8"></script>
-<script src="https://rawgit.com/andreaspada/andreaspada.github.io/master/jquery.cycle.all.js" type="text/javascript" charset="utf-8"></script>
-<script src="https://rawgit.com/andreaspada/andreaspada.github.io/master/jquery.maximage.js" type="text/javascript" charset="utf-8"></script>
-<script src="https://rawgit.com/andreaspada/andreaspada.github.io/master/jquery.fullscreen.js" type="text/javascript" charset="utf-8"></script>
-<script src="https://rawgit.com/andreaspada/andreaspada.github.io/master/jquery.ba-hashchange.js" type="text/javascript" charset="utf-8"></script>
-<script src="https://rawgit.com/andreaspada/andreaspada.github.io/master/js/main.js" type="text/javascript" charset="utf-8"></script>
+
+<script>
+	$.getScript("http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.js")</script>
+<script>
+	$.getScript("https://rawgit.com/andreaspada/andreaspada.github.io/master/js/jquery.easing.min.js")</script>
+<script>
+	$.getScript("https://rawgit.com/andreaspada/andreaspada.github.io/master/js/jquery.cycle.all.js")</script>
+<script> 
+	$.getScript("https://rawgit.com/andreaspada/andreaspada.github.io/master/jquery.maximage.js")</script>
+<script> 
+	$.getScript("https://rawgit.com/andreaspada/andreaspada.github.io/master/jquery.fullscreen.js")</script>
+<script> 
+	$.getScript("https://rawgit.com/andreaspada/andreaspada.github.io/master/jquery.ba-hashchange.js")</script>
+<script> 
+	$.getScript("https://rawgit.com/andreaspada/andreaspada.github.io/master/js/main.js")</script>
 
 <script src="https://use.fontawesome.com/24e236852d.js"></script>
 
-<script src="https://rawgit.com/andreaspada/andreaspada.github.io/master/js/translate.js"></script>
+<script>
+	$.getScript("https://rawgit.com/andreaspada/andreaspada.github.io/master/js/translate.js")</script>
+	
 <script type="text/javascript" charset="utf-8">
 			$(function(){
 				$('#maximage').maximage({
