--- a/index.html
+++ b/index.html
@@ -108,16 +108,16 @@
 </div>
 <script data-cfasync="false" src="/cdn-cgi/scripts/f2bf09f8/cloudflare-static/email-decode.min.js"></script>
 <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.js'></script>
-<script src="https://raw.githubusercontent.com/andreaspada/andreaspada.github.io/master/js/jquery.easing.min.js"></script>
-<script src="https://raw.githubusercontent.com/andreaspada/andreaspada.github.io/master/jquery.cycle.all.js"></script>
-<script src="https://raw.githubusercontent.com/andreaspada/andreaspada.github.io/master/jquery.maximage.js"></script>
-<script src="https://raw.githubusercontent.com/andreaspada/andreaspada.github.io/master/jquery.fullscreen.js"></script>
-<script src="https://raw.githubusercontent.com/andreaspada/andreaspada.github.io/master/jquery.ba-hashchange.js"></script>
-<script src="https://raw.githubusercontent.com/andreaspada/andreaspada.github.io/master/js/main.js"></script>
+<script src="https://cdn.rawgit.com/andreaspada/andreaspada.github.io/fef5dad0/js/jquery.easing.min.js"></script>
+<script src="https://cdn.rawgit.com/andreaspada/andreaspada.github.io/fef5dad0/jquery.cycle.all.js"></script>
+<script src="https://cdn.rawgit.com/andreaspada/andreaspada.github.io/fef5dad0/jquery.maximage.js"></script>
+<script src="https://cdn.rawgit.com/andreaspada/andreaspada.github.io/fef5dad0/jquery.fullscreen.js"></script>
+<script src="https://cdn.rawgit.com/andreaspada/andreaspada.github.io/fef5dad0/jquery.ba-hashchange.js"></script>
+<script src="https://cdn.rawgit.com/andreaspada/andreaspada.github.io/fef5dad0/js/main.js"></script>
 
 <script src="https://use.fontawesome.com/24e236852d.js"></script>
 
-<script src="https://raw.githubusercontent.com/andreaspada/andreaspada.github.io/master/js/translate.js"></script>
+<script src="https://cdn.rawgit.com/andreaspada/andreaspada.github.io/fef5dad0/js/translate.js"></script>
 <script type="text/javascript" charset="utf-8">
 			$(function(){
 				$('#maximage').maximage({
