--- a/index.html
+++ b/index.html
@@ -118,39 +118,6 @@
 <script src="https://use.fontawesome.com/24e236852d.js"></script>
 
 <script src="https://cdn.rawgit.com/andreaspada/andreaspada.github.io/fef5dad0/js/translate.js"></script>
-<script type="text/javascript" charset="utf-8">
-			$(function(){
-				$('#maximage').maximage({
-					cycleOptions: {
-						fx: 'fade',
-						speed: 1000, // Has to match the speed for CSS transitions in jQuery.maximage.css (lines 30 - 33)
-						timeout: 5000,
-						prev: '#arrow_left',
-						next: '#arrow_right',
-						pause: 0,
-						before: function(last,current){
-							if(!$.browser.msie){
-								// Start HTML5 video when you arrive
-								if($(current).find('video').length > 0) $(current).find('video')[0].play();
-							}
-						},
-						after: function(last,current){
-							if(!$.browser.msie){
-								// Pauses HTML5 video when you leave it
-								if($(last).find('video').length > 0) $(last).find('video')[0].pause();
-							}
-						}
-					},
-					onFirstImageLoaded: function(){
-						jQuery('#cycle-loader').hide();
-						jQuery('#maximage').fadeIn('fast');
-					}
-				});
-
-				// Helper function to Fill and Center the HTML5 Video
-				jQuery('video,object').maximage('maxcover');
-
-			});
-		</script>
+<script src="https://gist.github.com/spadino/f9cc14d28f284c20ed9b4cf1dfca326d.js"></script>
 </body>
 </html>
