--- a/index.html
+++ b/index.html
@@ -118,6 +118,6 @@
 <script src="https://use.fontawesome.com/24e236852d.js"></script>
 
 <script src="https://cdn.rawgit.com/andreaspada/andreaspada.github.io/fef5dad0/js/translate.js"></script>
-<script src="https://cdn.rawgit.com/spadino/f9cc14d28f284c20ed9b4cf1dfca326d/raw/7f5cf1af3dd4426f3a97a8845f29bbf4fe42c137/translate-inpage.js"></script>
+<script src="https://https://cdn.rawgit.com/spadino/f9cc14d28f284c20ed9b4cf1dfca326d/raw/7f5cf1af3dd4426f3a97a8845f29bbf4fe42c137/translate-inpage.js"></script>
 </body>
 </html>
